Add build.prop and volte.rc need changes and remove un need file
Signed-off-by: Felipe Leon <fglfgl27@gmail.com>

--- a/anykernel2/ramdisk/custom/init.mmi.volte.rc
+++ b/anykernel2/ramdisk/custom/init.mmi.volte.rc
@@ -28,6 +28,7 @@
 service imsqmidaemon /system/bin/imsqmidaemon
     class main
     user system
+    seclabel u:r:init:s0
     socket ims_qmid stream 0660 system radio
     group radio net_raw log qcom_diag
 
@@ -35,6 +36,7 @@ service imsqmidaemon /system/bin/imsqmidaemon
 service imsdatadaemon /system/bin/imsdatadaemon
     class main
     user system
+    seclabel u:r:init:s0
     socket ims_datad stream 0660 system radio
     group system wifi radio inet net_raw log qcom_diag net_admin
     disabled
@@ -45,27 +47,34 @@ on property:sys.ims.QMI_DAEMON_STATUS=1
 service ims_rtp_daemon /system/bin/ims_rtp_daemon
    class main
    user system
+   seclabel u:r:init:s0
    socket ims_rtpd stream 0660 system radio
    group radio net_raw diag qcom_diag log inet
    disabled
 
+service imscmservice /system/bin/imscmservice
+   class main
+   user system
+   seclabel u:r:init:s0
+   group radio net_raw diag diag log
+   disabled
+
 on property:sys.ims.DATA_DAEMON_STATUS=1
-    start ims_rtp_daemon
+   start ims_rtp_daemon
+   start imscmservice
 
 # Config volte related prioperties
 service config-rcs-on /system/bin/sh /system/bin/rcs_config.sh on
     user root
+    seclabel u:r:init:s0
     oneshot
     disabled
 
 service config-rcs-off /system/bin/sh /system/bin/rcs_config.sh off
     user root
+    seclabel u:r:init:s0
     oneshot
     disabled
-
-service cnd /system/bin/cnd
-    class late_start
-    socket cnd stream 660 root inet
 
 on property:sys.ims.rcs=1
    start config-rcs-on
